WIP: Branch 4.5 again
This patch is not intended to be merged to master branch. Instead, it's
intended to be merged to a new 4.5 branch, replacing current ovirt-4.5,
which would be branched from current master.

It should represent all the intended differences between 4.5 and master.

The immediate reason is
https://github.com/oVirt/ovirt-appliance/issues/94 .

While working on cherry-picking the patches there to 4.5, I realized
there are many more patches in master not cherry-picked to 4.5, and at
least some of those I checked, made sense to also be in 4.5. So current
patch is an alternative to this pick-and-choose process.

Change-Id: Id6ba5fd06ef40e403a4e085aecfb64ec84b5056c
Signed-off-by: Yedidyah Bar David <didi@redhat.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ on:
       keep_workdir:
         required: false
   push:
-    branches: [master]
+    branches: [ovirt-4.5]
   schedule:
     # Running every morning in EMEA timezone
     - cron: '0 6 * * *'
@@ -68,7 +68,7 @@ jobs:
           key: ${{ secrets.SSH_KEY_FOR_RESOURCES_OVIRT_ORG }}
           known_hosts: ${{ secrets.KNOWN_HOSTS_FOR_RESOURCES_OVIRT_ORG }}
           source: engine-appliance/tmp.repos/RPMS/x86_64/*.rpm
-          target: github-ci/ovirt-appliance/${{ matrix.name }}
+          target: github-ci/ovirt-appliance-4.5/${{ matrix.name }}
           cleanup: yes
           createrepo: yes
           # keep 10 last builds + repodata
